chore: add .gitignore to exclude Maven build artifacts